src/objects/MealInvitation__c.object
<CustomObject>
    <fields>
        <fullName>chk_Breakfast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breakfast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_Dinner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dinner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>chk_Lunch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lunch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dat_Day__c</fullName>
        <label>Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lkp_Breakfast__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Breakfast</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a Meal.</errorMessage>
            <filterItems>
                <field>CompensationRate__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Meal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CompensationRate__c</referenceTo>
        <relationshipLabel>Meal Invitations</relationshipLabel>
        <relationshipName>Meal_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Dinner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dinner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a meal.</errorMessage>
            <filterItems>
                <field>CompensationRate__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Meal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CompensationRate__c</referenceTo>
        <relationshipLabel>Meal Invitations (Dinner)</relationshipLabel>
        <relationshipName>Meal_Invitations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Lunch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lunch</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Not a meal.</errorMessage>
            <filterItems>
                <field>CompensationRate__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Meal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CompensationRate__c</referenceTo>
        <relationshipLabel>Meal Invitations (Lunch)</relationshipLabel>
        <relationshipName>Meal_Invitations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mdr_Travel__c</fullName>
        <label>Travel</label>
        <referenceTo>Travel__c</referenceTo>
        <relationshipLabel>Meal Invitations</relationshipLabel>
        <relationshipName>MealInvitations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Meal Invitation</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Meal Invitation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meal Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>